--- a/myFirstMVCWeek2/myFirstMVCWeek2.csproj
+++ b/myFirstMVCWeek2/myFirstMVCWeek2.csproj
@@ -13,4 +13,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyHowestWeek2\MyHowestWeek2.csproj" />
+  </ItemGroup>
+
 </Project>
